--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -7,22 +7,22 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/">AKSTS-2018 Moscow</a>
+      <a class="navbar-brand" href="/">AKSTS-2019 Moscow</a>
 <!--       <%= link_to image_tag("ru.png", alt: "", width: "29px", class: "lang_switch"), "#{request.path}?locale=ru", title: "Переключиться на Русский" %>
       <%= link_to image_tag("en.png", alt: "", width: "29px", class: "lang_switch"), "#{request.path}?locale=en", title: "Switch to English" %> -->
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <ul class="nav navbar-nav">
+      <!-- <ul class="nav navbar-nav">
         <li><%= link_to t(:home_link_home), root_path %></li>
         <li><%= link_to t(:home_link_program), program_path %></li>
         <li><%= link_to t(:home_link_message), message_path %></li>
         <li><%= link_to t(:home_link_about), about_path %></li>
         <li><%= link_to t(:home_link_history), history_path %></li>
         <li><%= link_to t(:home_link_hotel), hotel_path %></li>
-      </ul>
-      <ul class="nav navbar-nav navbar-right">
+      </ul> -->
+      <!-- <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Личный кабинет <span class="caret"></span></a>
           <ul class="dropdown-menu">
@@ -35,7 +35,7 @@
             <% end %> 
           </ul>
         </li>
-      </ul>
+      </ul> -->
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
