--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -38,6 +38,7 @@
               <p><%= link_to t(:step3_view_btn), applic_applic_file_path(current_user.applic, current_user.applic.applic_file), class: "btn btn-default btn-lg"%></p>
             <% else %>
               <p><%= link_to t(:step3_apply_btn), new_applic_applic_file_path(current_user.applic), class: "btn btn-primary btn-lg"%></p>
+              <p><%= t(:step3_apply_btn_long)%></p>
             <% end %>
           <% else %>
             <p><%= link_to t(:step2_apply_btn), (new_applic_path + '#new_applic'), class: "btn btn-lg btn-primary"%></p>
@@ -48,10 +49,11 @@
         <div class="invite_to_conf">
           <!-- <h4><%= t :home_conf_description %></h4> -->
           <div class="buttons">
-            <h3 style="color: red;">РЕГИСТРАЦИЯ НА САЙТЕ БУДЕТ ОТКРЫТА 28 АПРЕЛЯ</h3>
-            <!-- <p><%= link_to t(:sign_up), (new_user_registration_path + '#new_registration'), class: "btn btn-primary btn-lg" %></p>
+            <h3 style="color: red;">РЕГИСТРАЦИЯ ОТКРЫТА</h3>
+            <br/>
+            <p><%= link_to t(:sign_up), (new_user_registration_path + '#new_registration'), class: "btn btn-primary btn-lg" %></p>
             <p><%= t(:or) %></p>
-            <p><%= link_to t(:home_link_log_in), new_user_session_path, class: "btn btn-default btn-lg"%></p> -->
+            <p><%= link_to t(:home_link_log_in), new_user_session_path, class: "btn btn-default btn-lg"%></p>
           </div>
         </div>
       <% end %>
