--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -22,7 +22,7 @@
         <li><%= link_to t(:home_link_history), history_path %></li>
         <li><%= link_to t(:home_link_hotel), hotel_path %></li>
       </ul> -->
-      <!-- <ul class="nav navbar-nav navbar-right">
+      <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Личный кабинет <span class="caret"></span></a>
           <ul class="dropdown-menu">
@@ -35,7 +35,7 @@
             <% end %> 
           </ul>
         </li>
-      </ul> -->
+      </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
 </nav>
