doc(*): informational letter 2

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -17,7 +17,7 @@
   </div>
   <div class="col-md-4">
     <div class="home_img">
-      <%= image_tag "home_img_2018.jpg", class: "img-responsive" %>
+      <%= image_tag "home_img_2019.jpg", class: "img-responsive" %>
     </div>
   </div>
 </div>
@@ -101,6 +101,7 @@
       <p>Рабочие языки конференции: русский и английский.</p>
       <ul>
         <li><%= link_to "Информационное письмо (Рус.)", '/docs/inform1_v1.1.docx' %></li>
+        <li><%= link_to "Информационное письмо 2 (Рус.)", '/docs/Inform2_v1.0.pdf', target: "_blank" %></li>
         <!-- <li><%= link_to "Программа конференции / Program", '/docs/2018_Program_EN_RU_v2.6.pdf', target: "_blank" %></li>
         <li><%= link_to "Программа секций / Workshops program", '/docs/2018_WorkshopProgramEN-RU_v1.6.pdf', target: "_blank" %></li>
         <li><%= link_to "О компенсации транспортных расходов", '/docs/tickets2018_v1.pdf', target: "_blank" %></li>
