--- a/app/views/static_pages/message.html.erb
+++ b/app/views/static_pages/message.html.erb
@@ -10,8 +10,8 @@
     <br/>
     <div class="justify">
       <p>Приглашаю Вас принять активное участие в работе очередной Международной конференции по науке и технологиям «Россия-Корея-СНГ», которая состоится в подмосковном доме отдыха!</p>
-      <p>Организаторами нынешней XVIII-ой конференции являются Общероссийское объединение корейцев и Корейская федерация научно-технологических обществ (Республика Корея), а со-организаторами -  Научно-технические общества России «АНТОК», Казахстана «КАХАК» и Узбекистана «ТИНБО».</p>
-      <p>Конференция проводится под девизом “SCIENCE. FRIENDSHIP. COLLABORATION. В программе конференции предусмотрены торжественное открытие, пленарное и секционные заседания, специальная программа из тематических семинаров, включая молодежный. В рамках конференции планируется организация мероприятий для обсуждения актуальных вопросов научно-технического сотрудничества корейцев, проживающих в странах СНГ и Республике Корея. Планируется также интересная культурная программа.</p>
+      <p>Организаторами нынешней XIX-ой конференции являются Общероссийское объединение корейцев и Корейская федерация научно-технологических обществ (Республика Корея), а со-организаторами -  Научно-технические общества России «АНТОК», Казахстана «КАХАК» и Узбекистана «ТИНБО».</p>
+      <p>Конференция проводится под девизом "Enabling people with science and technology!". В программе конференции предусмотрены торжественное открытие, пленарное и секционные заседания, специальная программа из тематических семинаров, включая молодежный. В рамках конференции планируется организация мероприятий для обсуждения актуальных вопросов научно-технического сотрудничества корейцев, проживающих в странах СНГ и Республике Корея. Планируется также интересная культурная программа.</p>
       <br/>
       <p>Ждем Вас на конференции!</p>
       <br/>
