feat(news): updated finish papers date

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -89,7 +89,7 @@
     <div class="invite_wrapper_dates">
       <h3>Важные даты</h3>
       <ul>
-        <li>31 мая 2019 – завершение приема докладов</li>
+        <li>15 июня 2019 – завершение приема докладов</li>
       </ul>
       <!-- <h3>Расписание работы конференции</h3>
       <ul>
