feat(hotel-page): add vinogradovo hotel

--- a/app/views/static_pages/hotel.html.erb
+++ b/app/views/static_pages/hotel.html.erb
@@ -1,52 +1,33 @@
 <h2 id="title_about_conf">Как добраться</h2>
 <div class="row frontpage">
   <div class="col-md-6">
-    <p id ="info_about_aksts">Отель Холидей Инн Москва Лесная 4 звезды расположен в ультрасовременном районе Белая Площадь. Все номера оснащены удобными кроватями и первоклассными постельными принадлежностями. Доступен бесплатный высокоскоростной интернет Wi-Fi.<p/>
-    <p>На первом этаже отеля расположены ресторан Red & White и бар, оформленные в красно-белых тонах и предлагающие блюда международной кухни. Второй этаж гостиницы занимает конференц зона общей площадью 738 кв. м, включая 6 залов и просторное функциональное фойе. <p/>
-    <p>Холидей Инн Лесная находится в 300 метрах от станции метро Белорусская и улицы Тверская-Ямская, которая ведет прямо к Красной Площади.</p>
+    <p id ="info_about_aksts">Современный отель «Holiday Inn Виноградово» находится на берегу озера, менее чем в 20 км от аэропорта Шереметьево. К услугам гостей крытый бассейн и фитнес-центр с небольшим тренажерным залом и 2 саунами.</p>
+    <p>В номерах отеля «Holiday Inn Виноградово» установлен письменный стол и обустроен гостиный уголок. В числе удобств телевизор со спутниковыми каналами и бесплатный Wi-Fi.</p>
+    <p>Отель «Holiday Inn Виноградово» находится в 15 км от выставочного центра «Крокус Экспо». Автомобиль можно бесплатно оставить на частной парковке.</p>
     <br>
-
-    <p><b>Адрес:</b> г. Москва, ул. Лесная, д. 15</p>
-    <p><b>Телефон:</b> +7 (495) 66-55-325<br>
-      <b>Факс:</b> +7 (495) 66-55-325</p>
-    <p><b>E-mail:</b> reservations.service@gmail.com</p>
-    <p><b>Сайт: </b><a href="http://www.moscow-hi.ru/lesnaya/">Холидей Инн Лесная</a>
+    <p><b>Адрес:</b> г. Москва, Дмитровское шоссе, владение 171</p>
+    <p><b>Телефон:</b> +7 (495) 937-06-70</p><br>
+    <p><b>E-mail:</b> reservations.mowvg@ihg.com</p>
+    <p><b>Сайт: </b><a href="http://himv.ru/">Холидей Инн Виноградово</a></p>
   </div>
   <div class="col-md-6">
-    <%= image_tag "hotel/1.jpg", class: "img-responsive", alt: "Холидей Инн Лесная" %>
-    <h5 id="image_title">Холидей Инн Лесная</h5>
-  </div> 
+    <%= image_tag "hotel2019/11.jpg", class: "img-responsive", alt: "Холидей Инн Виноградово" %>
+    <h5 id="image_title">Холидей Инн Виноградово</h5>
+  </div>   
 </div>
-
 <div class="row">
   <div class="col-md-6">
-    <h4>От метро Белорусская</h4>
-      <p><b>Пешком:</b> Выйдите из метро на станции Белорусская - кольцевая. Следуйте указателям "выход на Лесную улицу". На улице пройдите 20 метров до Лесной улицы и поверните налево. Пройти 200 метров до отеля.<p/><br>
-
-    <h4>Из аэропорта Шереметьево</h4>
-      <p><b>На аэроэкспрессе:</b> Из аэропорта доехать до Белорусского вокзала, пройти по Тверскому путепроводу, перейти дорогу к Белой площади. Перейти через площадь, повернуть налев.<p/>
-      <p><b>На автобусе:</b> На автобусе № 851С доехать до метро Речной Вокзал. Отправление из аэропорта каждый час с 07:05 до 21:05. Далее на метро до станции Белорусская - радиальная (6 остановок). Сделать переход на Белорусскую – кольцевую и выйти на улицу. На Лесной улице повернуть налево и пройти 200 метров до отеля.</p><br>
-
-    <h4>Из аэропорта Домодедово</h4>
-      <p><b>На аэроэкспрессе:</b> Из аэропорта доехать до Павелецкого вокзала. Отправление из аэропорта каждый час с 06:00 до 23:00. Далее на метро от станции Павелецкая – колцевая до станции Белорусская- кольцевая (6 остановок). Выйти из метро, повернуть налево и пройти 200 метров до отеля.<p/>
-      <p><b>На автобусе:</b> Из аэропорта до метро Домодедовская. Отправление автобуса каждые 40 минут с 06:00 до 24:00. Далее на метро до станции Белорусская (12 остановок), перейти на кольцевую линию. Выйти из метро на Лесную улицу и повернуть налево. Пройти 200 метров до отеля.</p><br>
-
-    <h4>Из аэропорта Внуково</h4>
-      <p><b>На аэроэкспрессе:</b> Из аэропорта доехать до Киевского вокзала. Отправление каждый час с 06:15 до 21:35. Далее на метро от станции Киевская - кольцевая до станции Белорусская - кольцевая (2 остановки). Выйти из метро на Лесную улицу и повернуть налево. Пройти 200 метров до отеля.<p/>
-      <p><b>На автобусе:</b> На автобусе № 611c доехать до метро Юго-Западная. Отправление автобусов каждые 15 минут с 06:00 до 20:00. Далее на метро до станции Парк Культуры (5 остановок). Перейти на Кольцевую линию и доехать до станции Белорусская (3 остановки). Выйти из метро на Лесную улицу и повернуть налево. Пройти 200 метров до отеля.</p><br>
+    <h4>От метро Алтуфьево</h4>
+    <p>От станции московского метрополитена «Алтуфьево» Серпуховско-Тимирязевской линии посетители доедут до гостиницы «Holiday Inn Moscow Vinogradovo» на автобусах №519, №685 или маршрутных такси №572, №685м, следуя до остановки «Виноградово» (далее пешком около 500 метров). Для того чтобы добраться сюда на личном транспорте от МКАД, необходимо, проехав около 2,5 км по Дмитровскому шоссе (съезд на 82-м км), осуществить левый поворот (на Долгопрудную аллею), затем, проехав по ней около 200 метров, свернуть в проулок и двигаться еще 300 метров до здания отеля (дорога от МКАД займет не более 6 минут).</p>
   </div>
   <div class="col-md-6">
-    <%= image_tag "hotel/2.jpg", class: "img-responsive", alt: "Банкетный зал" %>
-    <h5 id="image_title">Банкетный зал</h5>
-  </div> 
-  <div class="col-md-6">
-    <%= image_tag "hotel/3.jpg", class: "img-responsive", alt: "Зал Тверь" %>
-    <h5 id="image_title">Зал «Тверь»</h5>
-  </div> 
+   <%= image_tag "hotel2019/22.jpg", class: "img-responsive", alt: "Зал Пилот" %>  
+   <h5 id="image_title">Зал Пилот</h5>
+ </div> 
 </div>
 
 <div class="row frontpage">
   <div class="col-md-12">
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2243.8283580524117!2d37.58681891706237!3d55.77885284360766!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x414adb5f731c44af%3A0xd38295066d4fb0b3!2sHoliday+Inn+Moscow!5e0!3m2!1sru!2s!4v1533732869983" width=100% height="450" frameborder="0" style="border:0"></iframe>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2234.3287138203104!2d37.53415705154151!3d55.9436743805096!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54a5abb7193b1%3A0x29057da6cd9f6480!2z0KXQvtC70LjQtNC10Lkg0JjQvdC9INCS0LjQvdC-0LPRgNCw0LTQvtCy0L4!5e0!3m2!1sru!2sru!4v1562536254052!5m2!1sru!2sru" width="100%" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
   </div>
 </div>
