--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -14,14 +14,14 @@
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-      <!-- <ul class="nav navbar-nav">
+      <ul class="nav navbar-nav">
         <li><%= link_to t(:home_link_home), root_path %></li>
-        <li><%= link_to t(:home_link_program), program_path %></li>
+        <!-- <li><%= link_to t(:home_link_program), program_path %></li>
         <li><%= link_to t(:home_link_message), message_path %></li>
         <li><%= link_to t(:home_link_about), about_path %></li>
-        <li><%= link_to t(:home_link_history), history_path %></li>
+        <li><%= link_to t(:home_link_history), history_path %></li> -->
         <li><%= link_to t(:home_link_hotel), hotel_path %></li>
-      </ul> -->
+      </ul>
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Личный кабинет <span class="caret"></span></a>
