--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -64,24 +64,15 @@
     <div class="invite_wrapper_dates">
       <h3>НОВОСТИ</h3>
       <div class="news_record">
+        <h4>3-е информационное письмо</h4>
+        <p><b>12 июля 2019</b></p>
+        <p>Ознакомиться можно тут - <%= link_to "Информационное письмо 3 (Рус.)", '/docs/Inform3_v1.0.pdf', target: "_blank" %></p>
+      </div>
+      <div class="news_record">
         <h4>Регистрация на конференцию</h4>
         <p><b>23 апреля 2019</b></p>
         <p>Регистрация на конференцию AKSTS-2019 будет открыта 28 апреля. Регистрация будет производиться на этом сайте.</p>
-        <!-- <p>Составлен список участников конференции. <br/>Ознакомиться можно тут - <%= link_to "Список участников", '/docs/participants_list_CISKC_2018.pdf', target: "_blank" %></p> -->
       </div>
-      <!-- <div class="news_record">
-        <h4>Определены участники секций и воркшопов</h4>
-        <p><b>13 августа 2018</b></p>
-        <p>Определены участники всех секций и воркшопов. Просьба ознакомиться, при наличии вопросов обращайтесь в Оргкомитет. <br/>Читать тут - <%= link_to "Программа секций и воркшопов", '/docs/2018_WorkshopProgramEN-RU_v1.6.pdf', target: "_blank" %></p>
-      </div>
-      <div class="news_record">
-        <h4>Выступление в виде стендового доклада</h4>
-        <p><b>4 августа 2018</b></p>
-        <p>По результатам рассмотрения статей и тезисов докладов рецензентом будет определена форма выступления – устная презентация или стендовый доклад. <span style="background-color: yellow;">Список участников стендовой сессии</span> будет указан 10 августа 2018 г. на сайте конференции в разделе <i>Стендовая сессия</i>.</p>
-        <p>В день выступления Вы  должны разместить свой плакат в соответствии с номером, который Вы получите при регистрации. <b>По результатам работы членов Экспертной Комиссии будут определены победители сессии</b>.</p>
-        <p>После окончания постерной сессии, пожалуйста, снимите плакат. Организационный комитет не несет ответственности за постеры, неубранные вовремя.</p>
-        <p>Рекомендации по подготовке стендового доклада - <%= link_to "Стендовые требования", '/docs/stand.docx' %></p>
-      </div> -->
     </div>
   </div>
   <div class="col-md-6">
@@ -96,11 +87,12 @@
         <li>27 августа – открытие конференции, пленарное заседание, работа научных секций и тематических семинаров</li>
         <li>28 августа – пленарное заседание, секция стендовых докладов, культурная программа, закрытие конференции</li>
       </ul> -->
-      <h3>Информационное письмо и программа</h3>
+      <h3>Информационные письма и программа</h3>
       <p>Рабочие языки конференции: русский и английский.</p>
       <ul>
         <li><%= link_to "Информационное письмо (Рус.)", '/docs/inform1_v1.1.docx' %></li>
         <li><%= link_to "Информационное письмо 2 (Рус.)", '/docs/Inform2_v1.0.pdf', target: "_blank" %></li>
+        <li><%= link_to "Информационное письмо 3 (Рус.)", '/docs/Inform3_v1.0.pdf', target: "_blank" %></li>
         <!-- <li><%= link_to "Программа конференции / Program", '/docs/2018_Program_EN_RU_v2.6.pdf', target: "_blank" %></li>
         <li><%= link_to "Программа секций / Workshops program", '/docs/2018_WorkshopProgramEN-RU_v1.6.pdf', target: "_blank" %></li>
         <li><%= link_to "О компенсации транспортных расходов", '/docs/tickets2018_v1.pdf', target: "_blank" %></li>
