update hotel info

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -10,7 +10,7 @@
   <div class="col-md-4">
     <div class="invite_wrapper">
       <h3>Уважаемые коллеги!</h3>
-      <h3 class="conf">Приглашаем принять участие в XIX МЕЖДУНАРОДНОЙ КОНФЕРЕНЦИИ ПО НАУКЕ И ТЕХНОЛОГИЯМ РОССИЯ-КОРЕЯ-СНГ, которая пройдет в Москве</h3>
+      <h3 class="conf">Приглашаем принять участие в XIX МЕЖДУНАРОДНОЙ КОНФЕРЕНЦИИ ПО НАУКЕ И ТЕХНОЛОГИЯМ РОССИЯ-КОРЕЯ-СНГ, <%= link_to "которая пройдет в отеле «Holiday Inn Виноградово»", hotel_path %></h3>
       <h4>с 29 по 31 августа 2019 года</h4>
       <!-- <h4>в гостинице <%= link_to 'Holiday Inn Лесная', 'http://www.moscow-hi.ru/lesnaya/', target: '_blank' %></h4> -->
     </div>
@@ -64,13 +64,18 @@
     <div class="invite_wrapper_dates">
       <h3>НОВОСТИ</h3>
       <div class="news_record">
+        <h4>Определено место проведения конференции</h4>
+        <p><i>15 июля 2019</i></p>
+        <p>Конференция будет проходить в отеле «Holiday Inn Виноградово» схему проезда смотрите в разделе <%= link_to '"Как добраться"', hotel_path %></p>
+      </div>
+      <div class="news_record">
         <h4>3-е информационное письмо</h4>
-        <p><b>12 июля 2019</b></p>
+        <p><i>12 июля 2019</i></p>
         <p>Ознакомиться можно тут - <%= link_to "Информационное письмо 3 (Рус.)", '/docs/Inform3_v1.0.pdf', target: "_blank" %></p>
       </div>
       <div class="news_record">
         <h4>Регистрация на конференцию</h4>
-        <p><b>23 апреля 2019</b></p>
+        <p><i>23 апреля 2019</i></p>
         <p>Регистрация на конференцию AKSTS-2019 будет открыта 28 апреля. Регистрация будет производиться на этом сайте.</p>
       </div>
     </div>
