--- a/app/views/static_pages/hotel.html.erb
+++ b/app/views/static_pages/hotel.html.erb
@@ -18,12 +18,20 @@
 <div class="row">
   <div class="col-md-6">
     <h4>От метро Алтуфьево</h4>
-    <p>От станции московского метрополитена «Алтуфьево» Серпуховско-Тимирязевской линии посетители доедут до гостиницы «Holiday Inn Moscow Vinogradovo» на автобусах №519, №685 или маршрутных такси №572, №685м, следуя до остановки «Виноградово» (далее пешком около 500 метров). Для того чтобы добраться сюда на личном транспорте от МКАД, необходимо, проехав около 2,5 км по Дмитровскому шоссе (съезд на 82-м км), осуществить левый поворот (на Долгопрудную аллею), затем, проехав по ней около 200 метров, свернуть в проулок и двигаться еще 300 метров до здания отеля (дорога от МКАД займет не более 6 минут).</p>
+    <p>От станции московского метрополитена «Алтуфьево» Серпуховско-Тимирязевской линии посетители доедут до гостиницы «Holiday Inn Moscow Vinogradovo» на автобусах №519, №685 или маршрутных такси №572, №685м, следуя до остановки «Виноградово» (далее пешком около 500 метров).</p>
+    <br/>
+    <h4>На машине, такси</h4>
+    <p>Для того чтобы добраться сюда на личном транспорте от МКАД, необходимо, проехав около 2,5 км по Дмитровскому шоссе (съезд на 82-м км), осуществить левый поворот (на Долгопрудную аллею), затем, проехав по ней около 200 метров, свернуть в проулок и двигаться еще 300 метров до здания отеля (дорога от МКАД займет не более 6 минут).</p>
+    <br/>
+    <h4>Из аэропорта Шереметьево-2</h4>
+    <p>По Международному шоссе двигайтесь на запад, поверните на Ленинградское шоссе. Съезд с Ленинградского шоссе на МКАД в направлении движения на восток. После проезда по МКАД съезд на Дмитровское шоссе в направлении области. Через 4 км развернитесь под третьей эстакадой, потом поверните направо после наземного пешеходного перехода. Двигайтесь вдоль зеленого забора до шлагбаума.</p>
   </div>
   <div class="col-md-6">
-   <%= image_tag "hotel2019/22.jpg", class: "img-responsive", alt: "Зал Пилот" %>  
-   <h5 id="image_title">Зал Пилот</h5>
- </div> 
+   <%= image_tag "hotel2019/ekaterina.jpeg", class: "img-responsive", alt: "Зал Екатерина" %>  
+   <h5 id="image_title">Зал Екатерина</h5>
+   <%= image_tag "hotel2019/nikolaevsky.jpeg", class: "img-responsive", alt: "Зал Николаевский" %>  
+   <h5 id="image_title">Зал Николаевский</h5>
+  </div>
 </div>
 
 <div class="row frontpage">
