--- a/app/views/static_pages/hotel.html.erb
+++ b/app/views/static_pages/hotel.html.erb
@@ -18,6 +18,7 @@
 <div class="row">
   <div class="col-md-6">
     <h4>От метро Алтуфьево</h4>
+    <p><b>Яндекс такси от м. Алтуфьево до гостиницы стоит 300-400р в зависимости от загруженности дорог.</b></p>
     <p>От станции московского метрополитена «Алтуфьево» Серпуховско-Тимирязевской линии посетители доедут до гостиницы «Holiday Inn Moscow Vinogradovo» на автобусах №519, №685 или маршрутных такси №572, №685м, следуя до остановки «Виноградово» (далее пешком около 500 метров).</p>
     <br/>
     <h4>На машине, такси</h4>
