add programm and update logo

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,7 +4,7 @@
 <div class="row frontpage">
   <div class="col-md-4">
     <div class="home_img">
-      <%= image_tag "logo_conf2018_5.png", class: "img-responsive" %>
+      <%= image_tag "logo_conf2019.jpeg", class: "img-responsive" %>
     </div>
   </div>
   <div class="col-md-4">
@@ -95,14 +95,10 @@
       <h3>Информационные письма и программа</h3>
       <p>Рабочие языки конференции: русский и английский.</p>
       <ul>
+        <li><%= link_to "Программа конференции", '/docs/conf_program_20190816.pdf', target: "_blank" %></li>
         <li><%= link_to "Информационное письмо (Рус.)", '/docs/inform1_v1.1.docx' %></li>
         <li><%= link_to "Информационное письмо 2 (Рус.)", '/docs/Inform2_v1.0.pdf', target: "_blank" %></li>
         <li><%= link_to "Информационное письмо 3 (Рус.)", '/docs/Inform3_v1.0.pdf', target: "_blank" %></li>
-        <!-- <li><%= link_to "Программа конференции / Program", '/docs/2018_Program_EN_RU_v2.6.pdf', target: "_blank" %></li>
-        <li><%= link_to "Программа секций / Workshops program", '/docs/2018_WorkshopProgramEN-RU_v1.6.pdf', target: "_blank" %></li>
-        <li><%= link_to "О компенсации транспортных расходов", '/docs/tickets2018_v1.pdf', target: "_blank" %></li>
-        <li><%= link_to "Стендовые требования", '/docs/stand.docx' %></li>
-        <li><%= link_to "Список участников", '/docs/participants_list_CISKC_2018.pdf', target: "_blank" %></li> -->
       </ul>
     </div>
     <div class="invite_wrapper_dates">
