--- a/app/views/certificates/edit.html.erb
+++ b/app/views/certificates/edit.html.erb
@@ -3,5 +3,8 @@
   <div class="cert">
     <%= @applic.fio_eng %>
   </div>
+  <div class="sign">
+    <%= image_tag "edis_sign.png" %>
+  </div>
   <%= image_tag "sert2019en.jpeg" %>
 </div>
