fix(certif): fix sign

--- a/app/views/certificates/show.html.erb
+++ b/app/views/certificates/show.html.erb
@@ -4,7 +4,7 @@
     <%= @applic.fio %>
   </div>
   <div class="sign">
-    <%= image_tag "edis_sign.png" %>
+    <%= image_tag "edis_sign2.png" %>
   </div>
   <%= image_tag "sert2019ru.jpeg" %>
 </div>
