--- a/app/views/certificates/edit.html.erb
+++ b/app/views/certificates/edit.html.erb
@@ -4,7 +4,7 @@
     <%= @applic.fio_eng %>
   </div>
   <div class="sign">
-    <%= image_tag "edis_sign.png" %>
+    <%= image_tag "edis_sign2.png" %>
   </div>
   <%= image_tag "sert2019en.jpeg" %>
 </div>
