--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -19,8 +19,8 @@
         <!-- <li><%= link_to t(:home_link_program), program_path %></li>
         <li><%= link_to t(:home_link_message), message_path %></li>
         <li><%= link_to t(:home_link_about), about_path %></li>
-        <li><%= link_to t(:home_link_history), history_path %></li> -->
-        <li><%= link_to t(:home_link_certificates), certificates_path %></li>
+        <li><%= link_to t(:home_link_history), history_path %></li>
+        <li><%= link_to t(:home_link_certificates), certificates_path %></li> -->
         <li><%= link_to t(:home_link_hotel), hotel_path %></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
