--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,6 @@
 <h1 class="home_conf_title"><%= t :home_conf_antok %></h1>
 <h2 class="home_conf_subtitle"><%= t :home_conf_moto %></h2>
-<h2 class="home_conf_subtitle">SITE UNDER CONSTRUCTION!!!</h2>
+<h2 class="home_conf_subtitle">!!!SITE UNDER CONSTRUCTION!!!</h2>
 <div class="row frontpage">
   <div class="col-md-4">
     <div class="home_img">
