--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,23 +1,15 @@
 <h1 class="home_conf_title"><%= t :home_conf_antok %></h1>
 <h2 class="home_conf_subtitle"><%= t :home_conf_moto %></h2>
-<h2 class="home_conf_subtitle">!!!SITE UNDER CONSTRUCTION!!!</h2>
-<div class="row frontpage">
-  <div class="col-md-4">
-    <div class="home_img">
-      <%= image_tag "logo_conf2019.jpeg", class: "img-responsive" %>
-    </div>
-  </div>
-  <div class="col-md-4">
-    <div class="invite_wrapper">
-      <h3>Уважаемые коллеги!</h3>
-      <h3 class="conf">Приглашаем принять участие в XIX МЕЖДУНАРОДНОЙ КОНФЕРЕНЦИИ ПО НАУКЕ И ТЕХНОЛОГИЯМ РОССИЯ-КОРЕЯ-СНГ, <%= link_to "которая пройдет в отеле «Holiday Inn Виноградово»", hotel_path %></h3>
-      <h4>с 29 по 31 августа 2019 года</h4>
-      <!-- <h4>в гостинице <%= link_to 'Holiday Inn Лесная', 'http://www.moscow-hi.ru/lesnaya/', target: '_blank' %></h4> -->
-    </div>
-  </div>
-  <div class="col-md-4">
-    <div class="home_img">
-      <%= image_tag "home_img_2019.jpg", class: "img-responsive" %>
+<div class="home_img">
+  <%= image_tag "home_img_2020.jpg", class: "img-responsive" %>
+</div>
+<div class="frontpage">
+  <div class="invite_wrapper">
+    <h3>Уважаемые коллеги и друзья!</h3>
+    <div style="margin-top: 30px;">
+      <p><b>Организаторы конференции</b> – Научно-техническое общество «АНТОК» (Россия), Korean Federation of Science and Technology Societies (Республика Корея),</p>
+      <p><b>Соорганизаторы конференции</b> – Общероссийское объединение корейцев, Научно-технические общества «ТИНБО» (Узбекистан) и «КАХАК» (Казахстан), Корейско-Российский центр сотрудничества по науке и технологиям KORUSTEC, Молодежное движение корейцев Москвы</p>
+      <p>приглашают Вас принять участие в <b>XX ЮБИЛЕЙНОЙ МЕЖДУНАРОДНОЙ КОНФЕРЕНЦИИ ПО НАУКЕ И ТЕХНОЛОГИЯМ РОССИЯ-КОРЕЯ-СНГ</b>, которая будет проходить в формате онлайн <span style="font-weight: bold;">с 19 по 21 октября 2020 г.</span> под девизом «Think! Imagine! Create!».</p>
     </div>
   </div>
 </div>
@@ -64,11 +56,11 @@
     <div class="invite_wrapper_dates">
       <h3>НОВОСТИ</h3>
       <div class="news_record">
-        <h4>Определено место проведения конференции</h4>
-        <p><i>15 июля 2019</i></p>
-        <p>Конференция будет проходить в отеле «Holiday Inn Виноградово» схему проезда смотрите в разделе <%= link_to '"Как добраться"', hotel_path %></p>
+        <h4>Конференция будет проходить онлайн</h4>
+        <p><i>17 августа 2020</i></p>
+        <p>XX юбилейная конференция АНТОК будет проходить в формате онлайн с 19 по 21 октября 2020 г.</p>
       </div>
-      <div class="news_record">
+      <!-- <div class="news_record">
         <h4>3-е информационное письмо</h4>
         <p><i>12 июля 2019</i></p>
         <p>Ознакомиться можно тут - <%= link_to "Информационное письмо 3 (Рус.)", '/docs/Inform3_v1.0.pdf', target: "_blank" %></p>
@@ -77,33 +69,28 @@
         <h4>Регистрация на конференцию</h4>
         <p><i>23 апреля 2019</i></p>
         <p>Регистрация на конференцию AKSTS-2019 будет открыта 28 апреля. Регистрация будет производиться на этом сайте.</p>
-      </div>
+      </div> -->
     </div>
   </div>
   <div class="col-md-6">
     <div class="invite_wrapper_dates">
       <h3>Важные даты</h3>
       <ul>
-        <li>15 июня 2019 – завершение приема докладов</li>
+        <li>Для участия в конференции необходимо <span style="font-weight: bold;">до 15 сентября 2020 г.</span> пройти регистрацию на сайте</li>
+        <li>Решение о принятии доклада к публикации в сборнике трудов конференции, а также о форме доклада (выступление или стендовый) будет принято <span style="font-weight: bold;">до 30 сентября 2020 года.</span></li>
       </ul>
-      <!-- <h3>Расписание работы конференции</h3>
-      <ul>
-        <li>26 августа – заезд участников конференции</li>
-        <li>27 августа – открытие конференции, пленарное заседание, работа научных секций и тематических семинаров</li>
-        <li>28 августа – пленарное заседание, секция стендовых докладов, культурная программа, закрытие конференции</li>
-      </ul> -->
       <h3>Информационные письма и программа</h3>
-      <p>Рабочие языки конференции: русский и английский.</p>
+      <!-- <p>Рабочие языки конференции: русский и английский.</p> -->
       <ul>
-        <li><%= link_to "Программа конференции", '/docs/conf_program_20190816.pdf', target: "_blank" %></li>
-        <li><%= link_to "Информационное письмо (Рус.)", '/docs/inform1_v1.1.docx' %></li>
+        <li>TBD</li>
+    <!--     <li><%= link_to "Информационное письмо (Рус.)", '/docs/inform1_v1.1.docx' %></li>
         <li><%= link_to "Информационное письмо 2 (Рус.)", '/docs/Inform2_v1.0.pdf', target: "_blank" %></li>
-        <li><%= link_to "Информационное письмо 3 (Рус.)", '/docs/Inform3_v1.0.pdf', target: "_blank" %></li>
+        <li><%= link_to "Информационное письмо 3 (Рус.)", '/docs/Inform3_v1.0.pdf', target: "_blank" %></li> -->
       </ul>
     </div>
     <div class="invite_wrapper_dates">
       <h3>Контакты оргкомитета</h3>
-      <p><b>ВАЖНО!</b> Просьба указывать в теме письма «АНТОК-2019».</p>
+      <p><b>ВАЖНО!</b> Просьба указывать в теме письма «АНТОК-2020».</p>
       <p>Email: <a href="mailto:AKSTSRussia@gmail.com">AKSTSRussia@gmail.com</a></p>
       <div class="respect">
         С уважением,<br/>
