--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -82,9 +82,8 @@
       <h3>Информационные письма и программа</h3>
       <!-- <p>Рабочие языки конференции: русский и английский.</p> -->
       <ul>
-        <li>TBD</li>
-    <!--     <li><%= link_to "Информационное письмо (Рус.)", '/docs/inform1_v1.1.docx' %></li>
-        <li><%= link_to "Информационное письмо 2 (Рус.)", '/docs/Inform2_v1.0.pdf', target: "_blank" %></li>
+        <li><%= link_to "Информационное письмо (Рус.)", '/docs/2020_inform1_v1.1-1.pdf' %></li>
+        <!--<li><%= link_to "Информационное письмо 2 (Рус.)", '/docs/Inform2_v1.0.pdf', target: "_blank" %></li>
         <li><%= link_to "Информационное письмо 3 (Рус.)", '/docs/Inform3_v1.0.pdf', target: "_blank" %></li> -->
       </ul>
     </div>
