--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,9 +28,9 @@
             <%= image_tag "banner_kofst2_a.jpg", class: "img-responsive" %>
           </a>
         </div>
-        <div class="col-md-2 hidden-xs hidden-sm banner">
+        <div class="col-md-2 hidden-xs hidden-sm banner" style="margin-top: 50px;">
           <a href="http://www.aksts.ru/" target="_blank">
-            <%= image_tag "banner_aksts2_a.jpg", class: "img-responsive" %>
+            <%= image_tag "banner_aksts_2020.png", class: "img-responsive" %>
           </a>
         </div>
         <div class="col-md-2 hidden-xs hidden-sm banner">
@@ -43,9 +43,9 @@
             <%= image_tag "banner_korustec_a.jpg", class: "img-responsive" %>
           </a>
         </div>
-        <div class="col-md-1 hidden-xs hidden-sm banner">
+        <div class="col-md-1 hidden-xs hidden-sm banner" style="margin-top: 30px;">
           <a href="https://vk.com/mdkm_rf" target="_blank">
-            <%= image_tag "banner_mdkm_a1.png", class: "img-responsive" %>
+            <%= image_tag "banner_mdkm_2020.png", class: "img-responsive" %>
           </a>
         </div>
 
@@ -55,14 +55,14 @@
             <%= image_tag "banner_kahak_tinbo.jpg", class: "img-responsive" %>
           </a>
         </div>
-        <div class="hidden-md hidden-lg banner">
+        <div class="hidden-md hidden-lg banner" style="padding-top: 20px;">
           <a href="http://www.kofst.or.kr/kofst_us/index.html" target="_blank">
             <%= image_tag "banner_kofst2_b.jpg", class: "img-responsive" %>
           </a>
         </div>
-        <div class="hidden-md hidden-lg banner">
+        <div class="hidden-md hidden-lg banner" style="padding-top: 20px;">
           <a href="http://www.aksts.ru/" target="_blank">
-            <%= image_tag "banner_aksts2_b.jpg", class: "img-responsive" %>
+            <%= image_tag "banner_aksts_2020.png", class: "img-responsive" %>
           </a>
         </div>
         <div class="hidden-md hidden-lg banner">
@@ -77,7 +77,9 @@
         </div>
         <div class="hidden-md hidden-lg banner">
           <a href="https://vk.com/mdkm_rf" target="_blank">
-            <%= image_tag "banner_mdkm_b.png", class: "img-responsive" %>
+            <div style="margin-left: 20%; margin-right: 20%; ">
+              <%= image_tag "banner_mdkm_2020.png", class: "img-responsive" %>
+            </div>
           </a>
         </div>
       </div>
